Механизмы обнаружения сервисов (service discovery) и сеть в Kubernetes. Архитектура K8s/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: nginx:latest  # nginx с параметрами по умолчанию
---
apiVersion: v1
kind: Service
metadata:
  name: backend # имя сервиса
spec:
  selector:
    app: backend # в данном примере Service будет перенаправлять трафик к поду backend по селектору
  ports:
    - protocol: TCP
      port: 80        # порт, на котором сервис доступен
      targetPort: 80   # порт в контейнере, на который перенаправляется трафик
  type: ClusterIP     # сервис доступен только внутри кластера
